Convert alb_sg_id from string to list

--- a/terraform.tfvars.sample
+++ b/terraform.tfvars.sample
@@ -27,7 +27,7 @@ iam_instance_profile = "ecsInstanceRole"
 #--------------------------------------------------
 # ALB
 #--------------------------------------------------
-alb_sg_id = "sg-xxx"
+alb_sg_ids = ["sg-xxx"]
 
 #--------------------------------------------------
 # ASG
